--- a/resume.tex
+++ b/resume.tex
@@ -45,4 +45,9 @@
 		\label{image_1} % Label is used for referencing
 	\end{figure}
 	
+		
+\large \textbf{Objective:}
+		
+	To use Computer Science training in Software Development for designing and implementing Applications in various platforms to solve various problems.
+	
 \end{document}
