--- a/resume.tex
+++ b/resume.tex
@@ -46,8 +46,10 @@
 	\end{figure}
 	
 		
-\large \textbf{Objective:}
-		
-	To use Computer Science training in Software Development for designing and implementing Applications in various platforms to solve various problems.
+\large \textbf{OBJECTIVE:}
+	\texttt{	
+	To use Computer Science training in Software Development for designing and implementing Applications in various platforms to solve various problems}.
+	
+	\large \textbf{EDUCATION:}
 	
 \end{document}
