--- a/resume.tex
+++ b/resume.tex
@@ -50,6 +50,14 @@
 	\texttt{	
 	To use Computer Science training in Software Development for designing and implementing Applications in various platforms to solve various problems}.
 	
-	\large \textbf{EDUCATION:}
+	\large \textbf{EDUCATION}:
+	
+	\begin{tabular}{|c|c|c|c|c|}
+	\small Degree & \small College/School & \small University & \small Passing Year & \small Pass Percentage \\
+		\hline
+		\footnotesize  B.E.(CSE)  & \footnotesize Jain College of Engineering & \footnotesize Visvesvaraya Technological University & \footnotesize 2020 & \footnotesize 7.56(till 5th Sem) \\
+		\footnotesize PUC(Science) & \footnotesize MGV-PU College & \footnotesize Karnataka PU Board & \footnotesize 2016 &\footnotesize 74\%  \\
+		\footnotesize SSLC & \footnotesize Dnyan Prabodhan Mandir & \footnotesize ICSE & \footnotesize 2014 & \footnotesize 75 \%  \\
+	\end{tabular}
 	
 \end{document}
