--- a/resume.tex
+++ b/resume.tex
@@ -49,6 +49,7 @@
 \large \textbf{OBJECTIVE:}
 	\texttt{	
 	To use Computer Science training in Software Development for designing and implementing Applications in various platforms to solve various problems}.
+\vspace{\baselineskip}
 	
 	\large \textbf{EDUCATION}:
 	
@@ -58,6 +59,16 @@
 		\footnotesize  B.E.(CSE)  & \footnotesize Jain College of Engineering & \footnotesize Visvesvaraya Technological University & \footnotesize 2020 & \footnotesize 7.56(till 5th Sem) \\
 		\footnotesize PUC(Science) & \footnotesize MGV-PU College & \footnotesize Karnataka PU Board & \footnotesize 2016 &\footnotesize 74\%  \\
 		\footnotesize SSLC & \footnotesize Dnyan Prabodhan Mandir & \footnotesize ICSE & \footnotesize 2014 & \footnotesize 75 \%  \\
+
+\vspace{\baselineskip}
 	\end{tabular}
-	
+	\large \textbf{Projects}:
+	\begin{enumerate}
+		\item Blind Calculator | Android App
+		\item Online-Quiz | Web Application
+		\item Line Following Robot | E-Yantra 2018
+		\item Scanner | Android Application
+	\end{enumerate}
+
+
 \end{document}
