Internship details  added

--- a/resume.tex
+++ b/resume.tex
@@ -62,13 +62,18 @@
 
 \vspace{\baselineskip}
 	\end{tabular}
+\\
 	\large \textbf{Projects}:
 	\begin{enumerate}
 		\item Blind Calculator | Android App
 		\item Online-Quiz | Web Application
 		\item Line Following Robot | E-Yantra 2018
 		\item Scanner | Android Application
+		
+		\vspace{\baselineskip}
 	\end{enumerate}
-
+	\large \textbf{Training And Internships:}	
+	None
+	
 
 \end{document}
