--- a/resume.tex
+++ b/resume.tex
@@ -63,7 +63,7 @@
 \vspace{\baselineskip}
 	\end{tabular}
 \\
-	\large \textbf{Projects}:
+	\large \textbf{PROJECTS}:
 	\begin{enumerate}
 		\item Blind Calculator | Android App
 		\item Online-Quiz | Web Application
@@ -72,8 +72,14 @@
 		
 		\vspace{\baselineskip}
 	\end{enumerate}
-	\large \textbf{Training And Internships:}	
+	\large \textbf{TRAINING \&
+		INTERNSHIP:}	
 	None
+	\\
+	\large \textbf{RESEARCH PUBLICATIONS :}	
+	None
+	\\
+	
 	
 
 \end{document}
