Technical Skill added

--- a/resume.tex
+++ b/resume.tex
@@ -79,7 +79,18 @@
 	\large \textbf{RESEARCH PUBLICATIONS :}	
 	None
 	\\
-	
+	\large \textbf{TECHNICAL SKILLS}:
+	\begin{itemize}
+		\item C
+		\item C++
+		\item Java
+		\item Python
+		\item Php
+		\item SQL
+		\item C\#
+		\item HTML \& CSS
+		\item JavaScript
+	\end{itemize}
 	
 
 \end{document}
