--- a/resume.tex
+++ b/resume.tex
@@ -97,6 +97,9 @@ None
 \large \textbf{EXTRACURRICULAR ACTIVITIES:}	
 None
 \\
+\large \textbf{COCURRICULAR ACTIVITIES:}	
+None
+\\
 	
 
 \end{document}
