Personal Details added

--- a/resume.tex
+++ b/resume.tex
@@ -100,6 +100,11 @@ None
 \large \textbf{COCURRICULAR ACTIVITIES:}	
 None
 \\
-	
-
+\large \textbf{Personal Details}:\\
+Father’s Name: Suhas Patil \\
+Mother’s Name: Joshana Patil \\
+Sex: Male \\
+Date of Birth: 29/08/1998 \\
+Nationality: Indian \\
+Marital Status: Single \\
 \end{document}
