--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx}
 \graphicspath{{./images/}}
-
+ \usepackage{hyperref}
 \usepackage{lipsum}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -48,7 +48,7 @@
 		
 \large \textbf{OBJECTIVE:}
 	\texttt{	
-	To use Computer Science training in Software Development for designing and implementing Applications in various platforms to solve various problems}.
+	To use Computer Science training in Software Development for designing and implementing Applications in various platforms to solve various problems}.\\
 \vspace{\baselineskip}
 	
 	\large \textbf{EDUCATION}:
@@ -58,26 +58,26 @@
 		\hline
 		\footnotesize  B.E.(CSE)  & \footnotesize Jain College of Engineering & \footnotesize Visvesvaraya Technological University & \footnotesize 2020 & \footnotesize 7.56(till 5th Sem) \\
 		\footnotesize PUC(Science) & \footnotesize MGV-PU College & \footnotesize Karnataka PU Board & \footnotesize 2016 &\footnotesize 74\%  \\
-		\footnotesize SSLC & \footnotesize Dnyan Prabodhan Mandir & \footnotesize ICSE & \footnotesize 2014 & \footnotesize 75 \%  \\
-
+		\footnotesize SSLC & \footnotesize Dnyan Prabodhan Mandir & \footnotesize ICSE & \footnotesize 2014 & \footnotesize 75 \%  \\ 
+	
 \vspace{\baselineskip}
 	\end{tabular}
 \\
-	\large \textbf{PROJECTS}:
+	\large \textbf{PROJECTS}:\\
 	\begin{enumerate}
 		\item Blind Calculator | Android App
 		\item Online-Quiz | Web Application
 		\item Line Following Robot | E-Yantra 2018
-		\item Scanner | Android Application
+		\item Scanner | Android Application\\
 		
 		\vspace{\baselineskip}
 	\end{enumerate}
 	\large \textbf{TRAINING \&
 		INTERNSHIP:}	
-	None
+	None\\
 	\\
 	\large \textbf{RESEARCH PUBLICATIONS :}	
-	None
+	None\\
 	\\
 	\large \textbf{TECHNICAL SKILLS}:
 	\begin{itemize}
@@ -89,16 +89,16 @@
 		\item SQL
 		\item C\#
 		\item HTML \& CSS
-		\item JavaScript
+		\item JavaScript\\
 	\end{itemize}
 \large \textbf{SOFT SKILLS:}	
-None
+None\\
 \\
 \large \textbf{EXTRACURRICULAR ACTIVITIES:}	
-None
+None\\
 \\
 \large \textbf{COCURRICULAR ACTIVITIES:}	
-None
+None\\
 \\
 \large \textbf{Personal Details}:\\
 Father’s Name: Suhas Patil \\
@@ -107,4 +107,13 @@ Sex: Male \\
 Date of Birth: 29/08/1998 \\
 Nationality: Indian \\
 Marital Status: Single \\
+\\
+\large \textbf{Reference:}\\
+\href{Link}{https://github.com/lohitpenu/Internship-eYSIP-2019/blob/master/Latex/Latex-Tutorial-forPresentation.pdf} \\	
+
+\large \textbf{Declaration: }\\
+I hereby declare that the information furnished above is true to the best of my knowledge. I do hereby declare that above particulars of information and facts stated are true, correct and complete to the best of my knowledge and belief.\\
+
+
+
 \end{document}
