--- a/resume.tex
+++ b/resume.tex
@@ -6,7 +6,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \lhead{\centering{\Large \textbf{Tushar Patil}}}
-\cfoot{center of the footer!}
+\cfoot{}
 \renewcommand{\headrulewidth}{0.5pt}
 \renewcommand{\footrulewidth}{0.5pt}
 
@@ -114,6 +114,7 @@ Marital Status: Single \\
 \large \textbf{Declaration: }\\
 I hereby declare that the information furnished above is true to the best of my knowledge. I do hereby declare that above particulars of information and facts stated are true, correct and complete to the best of my knowledge and belief.\\
 
+\large \textbf{Date: } 17/04/2019\\
 
 
 \end{document}
