--- a/resume.tex
+++ b/resume.tex
@@ -94,12 +94,17 @@
 \large \textbf{SOFT SKILLS:}	
 None\\
 \\
-\large \textbf{EXTRACURRICULAR ACTIVITIES:}	
-None\\
-\\
-\large \textbf{COCURRICULAR ACTIVITIES:}	
-None\\
-\\
+\large \textbf{EXTRA-CURRICULAR ACTIVITIES:}\\
+	\begin{itemize}
+	\item Winning 3rd Price in KLE Google IO Extended Competition 2017-2018
+	\item Department Student Treasurer (FACE)
+	\item Finalist at E-Yantra Competition
+\end{itemize}
+\large \textbf{CO-CURRICULAR ACTIVITIES:}\\
+	\begin{enumerate}
+	\item College Fest Application Development | Android Application
+\end{enumerate}
+
 \large \textbf{Personal Details}:\\
 Father’s Name: Suhas Patil \\
 Mother’s Name: Joshana Patil \\
