--- a/resume.tex
+++ b/resume.tex
@@ -92,8 +92,17 @@
 		\item JavaScript\\
 	\end{itemize}
 \large \textbf{SOFT SKILLS:}	
-None\\
-\\
+	\begin{enumerate}
+	\item Confidence
+	\item Listening
+	\item Verbal communication
+	\item Non-verbal communication
+	\item Idea exchange
+	\item Curiosity
+	\item Self-management
+	\item Decision-making
+\end{enumerate}
+
 \large \textbf{EXTRA-CURRICULAR ACTIVITIES:}\\
 	\begin{itemize}
 	\item Winning 3rd Price in KLE Google IO Extended Competition 2017-2018
